# Tankzoid

./: CMakeLists.txt  README.MD
include/: Entity.hpp  EntityManager.hpp  Game.hpp  Logger.h  RenderWindow.hpp  Sprite.hpp  Spritesheet.hpp  Utilities.hpp
include/Entities/: Player.hpp  Tank.hpp
src/: Entity.cpp  EntityManager.cpp  Game.cpp  RenderWindow.cpp  Spritesheet.cpp  Utilities.cpp  logger.cpp  main.cpp
src/Entities/: Player.cpp  Tank.cpp
